--- a/pages/interests_travel.html
+++ b/pages/interests_travel.html
@@ -1,5 +1,6 @@
 
 <div>
+    <div class="text-center"><i class="fa fa-plane fa-4x" aria-hidden="true"></i></div>
     <h1>when traveling we like</h1>
     <div class="interest-buttons">
         <div class="travel groupings">
@@ -24,7 +25,7 @@
     </div>
 
     <!-----------Previous and Next buttons-------------->
-    <div class="previous-next pull-right" ng-hide="itc.loggedIn">
+    <div class="previous-next" ng-hide="itc.loggedIn">
         <a href="#/interests_outdoors">
             <button type="button" class="btn btn-default chevronButton" aria-label="Previous"
                     ng-click="itc.setTravelInterests()">
