--- a/pages/interests_out.html
+++ b/pages/interests_out.html
@@ -1,4 +1,5 @@
 <div>
+    <div class="text-center"><i class="fa fa-cutlery fa-2x" aria-hidden="true"></i></div>
     <h1>on a night out we like</h1><p class="input-fyi">(select at least one interest)</p>
     <div class="interest-buttons">
         <div class="out groupings">
@@ -52,7 +53,7 @@
     </div>
 
     <!-----------Previous and Next buttons-------------->
-    <div class="previous-next pull-right" ng-hide="ioc.loggedIn">
+    <div class="previous-next" ng-hide="ioc.loggedIn">
         <a href="#/interests_home">
             <button type="button" class="btn btn-default chevronButton" aria-label="Previous" ng-click="ioc.setNightOutInterests()">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
