--- a/pages/our_location.html
+++ b/pages/our_location.html
@@ -1,7 +1,8 @@
 
 <div class="location">
+    <div class="text-center"><i class="fa fa-map-o fa-4x" aria-hidden="true"></i></div>
     <h1>where are you?</h1>
-    <div class="match-locale">
+    <div class="match-locale" "text-center">
         <input type="number" maxlength='5' placeholder="zip code" class="input_text" ng-change='olc.checkMaxZip(olc.ourInputZip)' ng-model="olc.ourInputZip" ng-blur="olc.getOurLocation(olc.ourInputZip)" >
         <!-- Not currently supporting "use current location"; this is a possible future enhancement.
         <button type="button" class="btn btn-default btn-block current-location"><span class ="glyphicon glyphicon-search"></span>   use my current location</button>
