--- a/pages/their_age_range.html
+++ b/pages/their_age_range.html
@@ -1,4 +1,5 @@
 <div class="age_range">
+    <div class="text-center"><i class="fa fa-handshake-o fa-4x" aria-hidden="true"></i></div>
     <h1>we want to meet other couples who are  <span class="age"> {{tac.theirAgeRange()}}</span> years old.</h1> <p class="input-fyi">(select one or more)</p>
 
     <div class="age-range-buttons">
@@ -24,7 +25,7 @@
         </button>
     </div>
 
-    <div class="previous-next pull-right">
+    <div class="previous-next">
         <a href="#/our_age_range">
             <button type="button" class="btn btn-default chevronButton" aria-label="Previous">
                 <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
