--- a/pages/signup_picture.html
+++ b/pages/signup_picture.html
@@ -1,10 +1,11 @@
 <div class="signup-photo-page">
     <div>
-        <p>upload a photo</p>
+        <div class="text-center"><i class="fa fa-camera fa-4x" aria-hidden="true"></i></div>
         <div id="picture-dropzone-div" class="dropzone btn">
+            <div class="dz-message" data-dz-message><span>click here to upload a photo</span></div>
         </div>
         <br>
-        <div>
+        <div class="picture-area">
             <img src="{{sup.pictureLink}}" id="profile-picture">
         </div>
         <br>
