--- a/pages/user_fyi.html
+++ b/pages/user_fyi.html
@@ -1,12 +1,12 @@
 <div>
-    <p>to see your best matches:</p>
+    <h1>to see your best matches:</h1>
     <a href="#/signup_name">
         <button type="button" class="btn btn-default btn-block" aria-label="sign us up">
             sign us up
         </button>
     </a>
     <br>
-    <p>or for now:</p>
+    <h1>or for now:</h1>
     <a href="#/sample_match">
         <button type="button" class="btn btn-default btn-block" aria-label="show sample matches">
             show sample matches*
