--- a/pages/signup_password.html
+++ b/pages/signup_password.html
@@ -1,8 +1,9 @@
 <div>
+    <div class="text-center"><i class="fa fa-unlock-alt fa-4x" aria-hidden="true"></i></div>
     <!--enter password-->
     <input type="password" class="input_text" id="confirm" placeholder="password" ng-model="supc.ourPassword">
     <input type="password" class="input_text password-confirm" placeholder="confirm password" ng-model = "supc.confirmPassword">
-    <button type="button" class="btn btn-default btn-block current-location" id="submit"
+    <button type="button" class="btn btn-default btn-block" id="submit"
             ng-click="supc.validate_password()" aria-label="Submit">submit</button>
 
     <div class="alert alert-danger alert-dismissible fade in" ng-show="!supc.matchingPassword">password doesn't match </div>
